--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavierS Portfolio</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="gallery/favicon.padding">
+    <link rel="icon" type="image/png" href="gallery/favicon.png">
 </head>
 
 <body>
