--- a/contact.html
+++ b/contact.html
@@ -67,6 +67,7 @@
     <footer>
         <p>All material is copyrighted &copy; 2024</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
