--- a/animatics.html
+++ b/animatics.html
@@ -7,155 +7,158 @@
     <title>Animatics - My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="media/favicon.ico">
-
 </head>
 
 <body>
-
     <header>
         <nav class="top-menu">
             <div class="logo">JavierSMaza</div>
-            <ul>
+            <div class="burger-menu" onclick="toggleMenu()">&#9776;</div>
+            <ul id="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="animatics.html">Animatics</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="bio.html">Bio</a></li>
-                <li><a
-                        href="mailto:your-email@example.com?subject=I%20would%20like%20to%20contact%20you%20from%20site">Contact</a>
-                </li>
+                <li><a href="mailto:javiersmaza@hotmail.com?subject=I%20would%20like%20to%20contact%20you%20from%20site">Contact</a></li>            </ul>
             </ul>
         </nav>
     </header>
 
-    </div>
-    <div class="content-a">
-        <h1>Animatics</h1>
-        <div class="animatic-grid">
-            <div class="animatic-item">
-                <img src="media/animatics/rio01.png" alt="Sci-fi cityscape animatic thumbnail"
-                    class="animatic-thumbnail" width="300" height="200">
-                <div class="animatic-info">
-                    <h3 class="animatic-title">RIO</h3>
-                    <p class="animatic-description">20th century fox.</p>
-                    <a href="https://zinkvision.com/media/animatics/RIO01.mp4" class="animatic-link">Watch Animatic</a>
-                </div>
+</div>
+<div class="content-a">
+    <h1>Animatics</h1>
+    <div class="animatic-grid">
+        <div class="animatic-item">
+            <img src="media/animatics/rio01.png" alt="Sci-fi cityscape animatic thumbnail"
+                class="animatic-thumbnail" width="300" height="200">
+            <div class="animatic-info">
+                <h3 class="animatic-title">RIO</h3>
+                <p class="animatic-description">20th century fox.</p>
+                <a href="https://zinkvision.com/media/animatics/RIO01.mp4" class="animatic-link">Watch Animatic</a>
             </div>
-            <div class="animatic-item">
-                <img src="media/animatics/RIO02.png" alt="Fantasy forest animatic thumbnail" class="animatic-thumbnail"
-                    width="300" height="200">
-                <div class="animatic-info">
-                    <h3 class="animatic-title">RIO</h3>
-                    <p class="animatic-description">20th century fox </p>
-                    <a href="https://zinkvision.com/media/animatics/RIO02.mp4
-                " class="animatic-link">Watch Animatic</a>
-                </div>
+        </div>
+        <div class="animatic-item">
+            <img src="media/animatics/RIO02.png" alt="Fantasy forest animatic thumbnail" class="animatic-thumbnail"
+                width="300" height="200">
+            <div class="animatic-info">
+                <h3 class="animatic-title">RIO</h3>
+                <p class="animatic-description">20th century fox </p>
+                <a href="https://zinkvision.com/media/animatics/RIO02.mp4
+            " class="animatic-link">Watch Animatic</a>
             </div>
-            <div class="animatic-item">
-                <img src="https://zinkvision.com/media/images/smurfs01.png" alt="Underwater scene animatic thumbnail"
-                    class="animatic-thumbnail" width="300" height="200">
-                <div class="animatic-info">
-                    <h3 class="animatic-title">Smurfs</h3>
-                    <p class="animatic-description">SONY animation</p>
-                    <a href="https://zinkvision.com/media/animatics/smurfs01.mp4" class="animatic-link">Watch
-                        Animatic</a>
-                </div>
+        </div>
+        <div class="animatic-item">
+            <img src="https://zinkvision.com/media/images/smurfs01.png" alt="Underwater scene animatic thumbnail"
+                class="animatic-thumbnail" width="300" height="200">
+            <div class="animatic-info">
+                <h3 class="animatic-title">Smurfs</h3>
+                <p class="animatic-description">SONY animation</p>
+                <a href="https://zinkvision.com/media/animatics/smurfs01.mp4" class="animatic-link">Watch
+                    Animatic</a>
             </div>
-            <div class="animatic-item">
-                <img src="media/animatics/smurfs02.png" alt="Steampunk airship animatic thumbnail"
-                    class="animatic-thumbnail" width="300" height="200">
-                <div class="animatic-info">
-                    <h3 class="animatic-title">Smurfs</h3>
-                    <p class="animatic-description">SONY animation</p>
-                    <a href="https://zinkvision.com/media/animatics/smurfs02.mp4
-                " class="animatic-link">Watch Animatic</a>
-                </div>
+        </div>
+        <div class="animatic-item">
+            <img src="media/animatics/smurfs02.png" alt="Steampunk airship animatic thumbnail"
+                class="animatic-thumbnail" width="300" height="200">
+            <div class="animatic-info">
+                <h3 class="animatic-title">Smurfs</h3>
+                <p class="animatic-description">SONY animation</p>
+                <a href="https://zinkvision.com/media/animatics/smurfs02.mp4
+            " class="animatic-link">Watch Animatic</a>
             </div>
-            <div class="animatic-item">
-                <img src="media/animatics/emoji01.png" alt="Post-apocalyptic wasteland animatic thumbnail"
-                    class="animatic-thumbnail" width="300" height="200">
-                <div class="animatic-info">
-                    <h3 class="animatic-title">Emoji</h3>
-                    <p class="animatic-description">SONY animation</p>
-                    <a href="https://zinkvision.com/media/animatics/emoji01.mp4
-                " class="animatic-link">Watch Animatic</a>
-                </div>
+        </div>
+        <div class="animatic-item">
+            <img src="media/animatics/emoji01.png" alt="Post-apocalyptic wasteland animatic thumbnail"
+                class="animatic-thumbnail" width="300" height="200">
+            <div class="animatic-info">
+                <h3 class="animatic-title">Emoji</h3>
+                <p class="animatic-description">SONY animation</p>
+                <a href="https://zinkvision.com/media/animatics/emoji01.mp4
+            " class="animatic-link">Watch Animatic</a>
             </div>
-            <div class="animatic-item">
-                <img src="media/animatics/pushinboots01.png" alt="Space exploration animatic thumbnail"
-                    class="animatic-thumbnail" width="300" height="200">
-                <div class="animatic-info">
-                    <h3 class="animatic-title">Push in Boots</h3>
-                    <p class="animatic-description">Dreamworks/ Netflix</p>
-                    <a href="https://zinkvision.com/media/animatics/pushinboots01.mp4
-                " class="animatic-link">Watch Animatic</a>
-                </div>
+        </div>
+        <div class="animatic-item">
+            <img src="media/animatics/pushinboots01.png" alt="Space exploration animatic thumbnail"
+                class="animatic-thumbnail" width="300" height="200">
+            <div class="animatic-info">
+                <h3 class="animatic-title">Push in Boots</h3>
+                <p class="animatic-description">Dreamworks/ Netflix</p>
+                <a href="https://zinkvision.com/media/animatics/pushinboots01.mp4
+            " class="animatic-link">Watch Animatic</a>
             </div>
-            <div class="animatic-item">
-                <img src="media/animatics/pushinboots03.png" alt="Steampunk airship animatic thumbnail"
-                    class="animatic-thumbnail" width="300" height="200">
-                <div class="animatic-info">
-                    <h3 class="animatic-title">Push in Boots</h3>
-                    <p class="animatic-description">Dreamworks/ Netflix</p>
-                    <a href="https://zinkvision.com/media/animatics/pushinboots03.mp4" class="animatic-link">Watch
-                        Animatic</a>
-                </div>
+        </div>
+        <div class="animatic-item">
+            <img src="media/animatics/pushinboots03.png" alt="Steampunk airship animatic thumbnail"
+                class="animatic-thumbnail" width="300" height="200">
+            <div class="animatic-info">
+                <h3 class="animatic-title">Push in Boots</h3>
+                <p class="animatic-description">Dreamworks/ Netflix</p>
+                <a href="https://zinkvision.com/media/animatics/pushinboots03.mp4" class="animatic-link">Watch
+                    Animatic</a>
             </div>
-            <div class="animatic-item">
-                <img src="media/animatics/Pinguins01.png" alt="Post-apocalyptic wasteland animatic thumbnail"
-                    class="animatic-thumbnail" width="300" height="200">
-                <div class="animatic-info">
-                    <h3 class="animatic-title">Penguins of Madagascar</h3>
-                    <p class="animatic-description">Dreamworks/ Nickelodeon </p>
-                    <a href="https://zinkvision.com/media/animatics/pinguins01.mp4" class="animatic-link">Watch
-                        Animatic</a>
-                </div>
+        </div>
+        <div class="animatic-item">
+            <img src="media/animatics/Pinguins01.png" alt="Post-apocalyptic wasteland animatic thumbnail"
+                class="animatic-thumbnail" width="300" height="200">
+            <div class="animatic-info">
+                <h3 class="animatic-title">Penguins of Madagascar</h3>
+                <p class="animatic-description">Dreamworks/ Nickelodeon </p>
+                <a href="https://zinkvision.com/media/animatics/pinguins01.mp4" class="animatic-link">Watch
+                    Animatic</a>
             </div>
-            <div class="animatic-item">
-                <img src="media/animatics/whusu01.png" alt="Space exploration animatic thumbnail"
-                    class="animatic-thumbnail" width="300" height="200">
-                <div class="animatic-info">
-                    <h3 class="animatic-title">Wushu</h3>
-                    <p class="animatic-description">China Film Group.</p>
-                    <a href="https://zinkvision.com/media/animatics/whusu01.mp4
-                " class="animatic-link">Watch Animatic</a>
-                </div>
+        </div>
+        <div class="animatic-item">
+            <img src="media/animatics/whusu01.png" alt="Space exploration animatic thumbnail"
+                class="animatic-thumbnail" width="300" height="200">
+            <div class="animatic-info">
+                <h3 class="animatic-title">Wushu</h3>
+                <p class="animatic-description">China Film Group.</p>
+                <a href="https://zinkvision.com/media/animatics/whusu01.mp4
+            " class="animatic-link">Watch Animatic</a>
             </div>
-            <div class="animatic-item">
-                <img src="media/animatics/whusu02.png" alt="Steampunk airship animatic thumbnail"
-                    class="animatic-thumbnail" width="300" height="200">
-                <div class="animatic-info">
-                    <h3 class="animatic-title">Wushu</h3>
-                    <p class="animatic-description">China Film Group</p>
-                    <a href="https://zinkvision.com/media/animatics/whusu02.mp4" class="animatic-link">Watch
-                        Animatic</a>
-                </div>
+        </div>
+        <div class="animatic-item">
+            <img src="media/animatics/whusu02.png" alt="Steampunk airship animatic thumbnail"
+                class="animatic-thumbnail" width="300" height="200">
+            <div class="animatic-info">
+                <h3 class="animatic-title">Wushu</h3>
+                <p class="animatic-description">China Film Group</p>
+                <a href="https://zinkvision.com/media/animatics/whusu02.mp4" class="animatic-link">Watch
+                    Animatic</a>
             </div>
-            <div class="animatic-item">
-                <img src="media/animatics/samurirabit01.png" alt="Post-apocalyptic wasteland animatic thumbnail"
-                    class="animatic-thumbnail" width="300" height="200">
-                <div class="animatic-info">
-                    <h3 class="animatic-title">Samurai Rabbit</h3>
-                    <p class="animatic-description">Samurai Rabbit: The Usagi Chronicles/ Netflix</p>
-                    <a href="https://zinkvision.com/media/animatics/samurirabit01.mp4
-                " class="animatic-link">Watch Animatic</a>
-                </div>
+        </div>
+        <div class="animatic-item">
+            <img src="media/animatics/samurirabit01.png" alt="Post-apocalyptic wasteland animatic thumbnail"
+                class="animatic-thumbnail" width="300" height="200">
+            <div class="animatic-info">
+                <h3 class="animatic-title">Samurai Rabbit</h3>
+                <p class="animatic-description">Samurai Rabbit: The Usagi Chronicles/ Netflix</p>
+                <a href="https://zinkvision.com/media/animatics/samurirabit01.mp4
+            " class="animatic-link">Watch Animatic</a>
             </div>
-            <div class="animatic-item">
-                <img src="media/animatics/hw01.png" alt="Space exploration animatic thumbnail"
-                    class="animatic-thumbnail" width="300" height="200">
-                <div class="animatic-info">
-                    <h3 class="animatic-title">Hot Wheels</h3>
-                    <p class="animatic-description">Mattel, Inc/ Netflix</p>
-                    <a href="https://zinkvision.com/media/animatics/hw01.mp4
-                " class="animatic-link">Watch Animatic</a>
-                </div>
+        </div>
+        <div class="animatic-item">
+            <img src="media/animatics/hw01.png" alt="Space exploration animatic thumbnail"
+                class="animatic-thumbnail" width="300" height="200">
+            <div class="animatic-info">
+                <h3 class="animatic-title">Hot Wheels</h3>
+                <p class="animatic-description">Mattel, Inc/ Netflix</p>
+                <a href="https://zinkvision.com/media/animatics/hw01.mp4
+            " class="animatic-link">Watch Animatic</a>
             </div>
         </div>
     </div>
+</div>
+
     <footer>
         <p>All material is copyrighted &copy; 2024</p>
     </footer>
+
     <script>
+        function toggleMenu() {
+            const navLinks = document.getElementById('nav-links');
+            navLinks.classList.toggle('active');
+        }
         document.addEventListener('DOMContentLoaded', function () {
             const animaticLinks = document.querySelectorAll('.animatic-link');
             const body = document.body;
