--- a/index.html
+++ b/index.html
@@ -13,42 +13,40 @@
     <header>
         <nav class="top-menu">
             <div class="logo">JavierSMaza</div>
-            <div class="burger-menu" onclick="toggleMenu()">&#9776;</div>
-            <ul id="nav-links">
+            <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="animatics.html">Animatics</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="bio.html">Bio</a></li>
-                <li><a href="mailto:javiersmaza@hotmail.com?subject=I%20would%20like%20to%20contact%20you%20from%20site">Contact</a></li>            </ul>
+                <li><a
+                        href="mailto:your-email@example.com?subject=I%20would%20like%20to%20contact%20you%20from%20site">Contact</a>
+                </li>
+            </ul>
         </nav>
     </header>
 
     <main>
-        <!-- <div class="index-content">
+        <div class="index-content">
             <h1>Welcome to My Creative World</h1>
             <h2>Exploring Art & Animation</h2>
-            <p>Showcases a blend of traditional artistry and cutting-edge digital techniques.
+            <p>Dive into a portfolio that showcases a blend of traditional artistry and cutting-edge digital techniques.
                 Experience the magic of storytelling through visuals.</p>
-        </div> -->
+        </div>
 
         <div class="background-slideshow">
-            <img src="media/index/01.png" alt="A vibrant digital illustration of a fantastical landscape" class="active">
-            <img src="media/index/02.png" alt="An atmospheric oil painting of a misty forest">
-            <img src="media/index/03.png" alt="A dynamic 3D rendered scene of futuristic city">
-            <img src="media/index/04.png" alt="A whimsical character design sketch">
+            <img src="media/index/01.png" alt="A vibrant digital illustration of a fantastical landscape" class="active"
+                width="1920" height="1080">
+            <img src="media/index/02.png" alt="An atmospheric oil painting of a misty forest" width="1920"
+                height="1080">
+            <img src="media/index/03.png" alt="A dynamic 3D rendered scene of futuristic city" width="1920"
+                height="1080">
+            <img src="media/index/04.png" alt="A whimsical character design sketch" width="1920" height="1080">
         </div>
-    </main>
-    
-    <footer>
-        <p>All material is copyrighted &copy; 2025</p>
-    </footer>
-
-    <script>
-        function toggleMenu() {
-            const navLinks = document.getElementById('nav-links');
-            navLinks.classList.toggle('active');
-        }
-        const images = document.querySelectorAll('.background-slideshow img');
+        <footer>
+            <p>All material is copyrighted &copy; 2025</p>
+        </footer>
+        <script>
+            const images = document.querySelectorAll('.background-slideshow img');
             let currentImage = 0;
 
             function nextImage() {
@@ -58,7 +56,7 @@
             }
 
             setInterval(nextImage, 5000); // Change image every 5 seconds
-    </script>
+        </script>
 </body>
 
 </html>
